@@ -1,12 +1,12 @@
 {
-  "timestamp" : "2025-05-02T00:59:53Z",
-  "count_outdated" : 101,
-  "uniques_outdated" : 83,
-  "count" : 102,
-  "uniques" : 84,
+  "timestamp" : "2025-06-08T01:08:07Z",
+  "count_outdated" : 102,
+  "uniques_outdated" : 84,
+  "count" : 103,
+  "uniques" : 85,
   "clones" : [
     {
-      "timestamp": "2025-04-28T00:00:00Z",
+      "timestamp": "2025-06-07T00:00:00Z",
       "count": 1,
       "count_minmax": [ 1, 1 ],
       "count_decinc": [ 0, 1 ],
